Imagination changelog

xx/xx/xx - trunk:
            - Fixed compilation error on Fedora 13 (check for libm)
            - Fix loading of slides without image, bug #3306969

06/03/11 - 3.0:
			- Added Chinese simplified and Chinese traditional translations.
			- Icons in the transition menu are animated.
			- Fixed bug 2900684 in the VOB exported aspect ratio.
			- Added French translation of the documentation thanks to Yann Ubuntu.
			- Added Catalan translation thanks to Manuel Tortosa.
			- Added border to fonts thanks to Robert Cheramy.
		        - Added HD support
			- Fixed ffmpeg support
			- Improved handling of Image not found
			- Fixed export video extension
			- Imagination projects should now have .img as an extention
			- Changed behaviour of "new" and "open" (now work as expected)
			- Fixed #2905255 (Copy/Paste bug)
14/10/09 - 2.1:
			- Added a new transition family named Rochade.
			- Added 3GP export for mobile phones.
			- Fixed seg-fault when using Imagination with GTK 2.18
			- Fixed crash when playing with Ken Burns and slide text after closing the project.
			- Added a slides transitions report dialog.
			- Added Japanese translation.
			- Fixed display of music duration after loading the slideshow.
			- Fixed seg-fault when exporting with more audio files.
			- Image rotation is now stored inside project file.

27/09/09 - 2.0:
			- Fixed loading of text position icons.
			- Made the audio files to be concatenated and have fade-out effect at the end.
			- Fixed save warning dialog to appear when it shouldn't.
			- Fixed rescale images regression.
			- FLV export supports several video sizes.

22/08/09 - 2.0b1:
			- Fixed bug that caused exported slideshows being 20% longer than reported by Imagination.
			- Added ability to insert an empty slide with the option to choose a background color gradient in three different ways: solid, linear and radial.
			- Added Widescreen option to FLV exported video.